# embedded_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pc_lint.cmake
src/: CMakeLists.txt  async_example.c  main.c  main_full.c  unit_test.c
src/application/: CMakeLists.txt
src/application/bms_mqtt/: dtu_m35.c  dtu_m35.h  dtu_m35_platform.h  main.c
src/async/: CMakeLists.txt  async.c  async.h  async_test.c  event.c  event.h  event_call.c  event_call.h  looper.c  looper.h  platform.h  platform_freertos.c  platform_freertos.h  platform_posix.c  platform_posix.h  platform_ucos.h  private.h  timer.c  timer.h
src/atcmd/: CMakeLists.txt  atcmd.c  atcmd.h  atcmd_platform.h
src/drivers/: CMakeLists.txt
src/drivers/ad5259/: ad5259.c  ad5259.h  ad5259_platform.h  ad5259_test.c
src/drivers/ads1015/: ads1015.c  ads1015.h  ads1015_platform.h
src/drivers/ads8317/: ads8317.c  ads8317.h  ads8317_platform.h
src/drivers/dac816x/: dac816x.c  dac816x.h  dac816x_platform.h
src/drivers/dac856x/: dac856x.c  dac856x.h  dac856x_platform.h
src/drivers/hcf4052/: hcf4052.c  hcf4052.h  hcf4052_platform.h  hcf4052_test.c
src/drivers/hcs4052/: hcf4052.c  hcf4052.h  hcf4052_platform.h  hcf4052_test.c
src/drivers/ltc/: ltc6804.c  ltc6804.h  ltc6804_platform.h
src/drivers/pcf212x/: pcf212x.c  pcf212x.h  pcf212x_platform.h
src/drivers/sd2405al/: sd2405al.c  sd2405al.h  sd2405al_platform.h
src/dtu_m35/: CMakeLists.txt  dtu_m35.c  dtu_m35.h  dtu_m35_mqtt_impl.h  dtu_m35_platform.h
src/example/: CMakeLists.txt
src/example/atcmd/: CMakeLists.txt  main.c  winuart.c  winuart.h
src/example/shell/: CMakeLists.txt  main.c  (+1 more)
src/gpio/: CMakeLists.txt  gpio.c  gpio.h  gpio_platform.h
src/i2c/: CMakeLists.txt  i2c.c  i2c.h  i2c_platform.h  locked_i2c.c  locked_i2c.h  locked_i2c_platform.h  softi2c.c  softi2c.h
src/j1939/: databuffer.c  pgn_handle.h  private.h  transceiver.c  transceiver.h  transceiver_platform.h  transport.c  transport.h  transport_platform.h
src/list/: list.h
src/lua/: lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  ldblib.c  ldebug.c  ldo.c  ldump.c  legc.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  lmathlib.c  lmem.c  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lrotable.c  lrotable.h  lstate.c  lstate.h  lstring.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  ltm.h  lua.c  lua.h  luaconf_example.h  lundump.c  lundump.h  lvm.c  (+3 more)
src/mem_pool/: mem_pool.c  mem_pool.h  mem_pool_test.c
src/misc/: CMakeLists.txt  assert.h  bcd_code.c  bcd_code.h  debug.h  list.h  logger.c  logger.h  misc.h  second_datetime.c  second_datetime.h  second_datetime_test.c  timer.c  timer.h
src/mmcsd/: mmcsd_private.h  mmcsd_spi.c  mmcsd_spi.h
src/mqtt/: CMakeLists.txt
src/pidcontrol/: pidcontrol.c  pidcontrol.h
src/platform_os/: CMakeLists.txt  platform_freertos.h  platform_os.h  platform_posix.c  platform_posix.h  platform_ucos.h
src/ringbuffer/: CMakeLists.txt  ringbuffer.c  ringbuffer.h  ringbuffer_test.c
src/ringstorage/: ringstorage.c  ringstorage.h  ringstorage_platform.h
src/rs485_bus/: rs485_bus.c  rs485_bus.h  rs485_bus_platform.h
src/shell/: CMakeLists.txt  shell.c  shell.h  shell_config_example.c  shell_platform.h  shell_private.h
src/softi2c/: CMakeLists.txt  softi2c.c  softi2c.h  softi2c_platform.h
src/spi/: CMakeLists.txt  softspi.c  softspi.h  softspi_platform.h  spi.c  spi.h  spi_platform.h
(+45 files in other folders)
